...

  Future<void> _showLocalNotification(RemoteMessage message) async {
    _notificationProvider.loadUnreadCount();
    _apiClient.invalidateCache('/notifications');
    _notificationProvider.loadNotifications();

    final title = message.notification?.title ?? 'NomNom LK';
    final body = message.notification?.body ?? '';
    final data = message.data;

    AndroidNotificationDetails androidDetails;
    final imageURL = data['offer_image_url'];
    if (imageURL != null && imageURL.isNotEmpty) {
...
